--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Начало</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="about.html">about</a>
+                                    <a class="nav-link" href="about.html">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="services.html">services</a>
+                                    <a class="nav-link" href="services.html">Работы</a>
                                 </li>
                                 <li class="nav-item dropdown">
                                     <a class="nav-link dropdown-toggle" href="" id="navbarDropdownpro"
@@ -94,7 +94,7 @@
                             </a>
                             <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <div class="single_product">
-    
+
                                     </div>
                                 </div> -->
                         </div>
@@ -112,10 +112,10 @@
                 <div class="col-lg-5">
                     <div class="banner_text text-center">
                         <div class="banner_text_iner">
-                            <h5>Model Photography</h5>
-                            <h1>Creative <span>Studio</span></h1>
-                            <p>Capturing moments from today</p>
-                            <a href="#" class="btn_1">view work</a>
+                            <h5>фотографирую людей</h5>
+                            <h1>Даниил<span>Базарный</span></h1>
+                            <p>Ходожник фрагментов вашей жизни</p>
+                            <a href="#" class="btn_1">Посмотреть работы</a>
                         </div>
                     </div>
                 </div>
@@ -130,17 +130,11 @@
             <div class="row align-items-center justify-content-center">
                 <div class="col-lg-8">
                     <div class="about_us_text text-center">
-                        <h5>About our studio</h5>
-                        <h2>The Camera Is An Instrument That Teaches People
-                            how to See without a Camera</h2>
-                        <p>It’s the end of summer the sweltering heat makes human
-                            sweat in the night and makes the plants and trees wilt
-                            even in the moonlit nights. The eastern wind breeze brings
-                            an eerie feeling, that the monsoon clouds are soon coming,
-                            there is a strange silence in the ears, the sky gets darker
-                            and darker, the flash of lightning illuminates the dark skies,
-                            the sound of thunder fills the heart with fear.</p>
-                        <a href="#" class="btn_2">read more</a>
+                        <h5>от автора</h5>
+                        <h2>Камера это инструмент при помощи которого я раскрываю в людях чувства</h2>
+                        <p>Приветствую вас на моём сайте. Меня зовут Даниил, я свадебный фотограф в Ялте и по Крыму.
+Помимо свадеб, я занимаюсь индивидуальной и семейной фотосъемкой, а также организовываю фотопутешевствия по Крыму, снимаю интрерьеры и многое другое. Моя задача помочь людям увидеть себя красивыми.</p>
+                        <a href="#" class="btn_2">мои работы</a>
                     </div>
                 </div>
             </div>
@@ -154,8 +148,8 @@
             <div class="row">
                 <div class="col-lg-5 offset-lg-2">
                     <div class="section_tittle">
-                        <p>recent project</p>
-                        <h2>Check latest work</h2>
+                        <p>цель автора</p>
+                        <h2>Фотография это жизнь</h2>
                     </div>
                 </div>
             </div>
