--- a/index.html
+++ b/index.html
@@ -44,33 +44,42 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#top">Начало</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#top">Начало</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#autor">От Автора</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#autor">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#work">Работы</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#work">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#market">Предложения</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#market">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#comments">Комментарии</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#comments">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#price">Цены</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#price">Цены</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#more">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#more">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#contacts">Контакты</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#contacts">Контакты</a>
                                 </li>
                             </ul>
                         </div>
+                        <div class="dropdown cart">
+                            <a  href="#" >
+                                <i class="fas fa-arrow-up"></i>
+                            </a>
+                            <!-- <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                        <div class="single_product">
 
+                                        </div>
+                                    </div> -->
+                        </div>
                     </nav>
                 </div>
             </div>
