--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#top">Начало</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#top" target="_self">Начало</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#autor">От Автора</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#autor" target="_self">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#work">Работы</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#work" target="_self">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#market">Предложения</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#market" target="_self">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#comments">Комментарии</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#comments" target="_self">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#price">Цены</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#price" target="_self">Цены</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#more">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#more" target="_self">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#contacts">Контакты</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/#contacts" target="_self">Контакты</a>
                                 </li>
                             </ul>
                         </div>
