--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                     <div class="single_offer_text text-center nature">
                         <span class="flaticon-leaf"></span>
                         <h4>Интерьеры</h4>
-                        <p>С радостью сделаю для вас съемку как интерьеров так и экстерьеров коммерческого, жилого фонда. Обращайтесь +7 978 864 60 92</p>
+                        <p>С радостью сделаю для вас съемку как интерьеров так и экстерьеров коммерческого, жилого фонда. Обращайтесь <a href="tel:+79788646092"> +7 978 864 60 92 </a></p>
                         <a href="https://vk.com/bazarnyphotography" class="btn_1">Заказать через VK</a>
                     </div>
                 </div>
@@ -464,8 +464,8 @@
                         <h4>Контакты</h4>
                         <p>Я живу в городе Ялта. Крым.</p>
                         <ul>
-                            <li><a href="#"><i class="ti-mobile"></i>+7 978 864 60 92</a></li>
-                            <li><a href="#"><i class="ti-email"></i>ariclaw@law.com</a></li>
+                            <li><a href="tel:+79788646092"><i class="ti-mobile"></i>+7 978 864 60 92</a></li>
+                            <li><a href="mailto:dankirova@yandex.ru"><i class="ti-email"></i>dankirova@yandex.ru</a></li>
                             <li><a href="#"><i class="ti-world"></i>http://dbazarny.ru/</a></li>
                         </ul>
                     </div>
