--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                             <h5>фотографирую людей</h5>
                             <h1>Даниил<span>Базарный</span></h1>
                             <p>Ходожник фрагментов вашей жизни</p>
+                            <p><a href="tel:+79788646092" style="color:#ff4800"> +7 978 864 60 92 </a></p>
+                            <br>
                             <a href="#work" class="btn_1">Посмотреть работы</a>
                         </div>
                     </div>
