--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <div class="banner_text_iner">
                             <h5>фотографирую людей</h5>
                             <h1>Даниил<span>Базарный</span></h1>
-                            <p>Ходожник фрагментов вашей жизни</p>
+                            <p>Художник фрагментов вашей жизни</p>
                             <p><a href="tel:+79788646092" style="color:#ff4800"> +7 978 864 60 92 </a></p>
                             <br>
                             <a href="#work" class="btn_1">Посмотреть работы</a>
@@ -147,9 +147,10 @@
                         <ul>
                             <li class="active" data-filter="all">Все фото</li>
                             <li data-filter="1">Свадьбы</li>
-                            <li data-filter="2">Фэшн</li>
+                            <li data-filter="2">Фотопоездки</li>
                             <li data-filter="3">Портреты</li>
                             <li data-filter="4">Еда</li>
+                            <li data-filter="5">Недвижимость</li>
                         </ul>
                     </div>
                 </div>
@@ -162,8 +163,8 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Свадебные фото</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
@@ -173,8 +174,8 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Поедем поснимаем</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
@@ -184,8 +185,8 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Портретная съемка</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
@@ -195,34 +196,134 @@
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Еда для ресторанов и другого</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="1"
+                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
                             style="background-image: url('img/gallery/gallery_item_5.png')">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Объекты недвижимости</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="2"
+                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="1"
                             style="background-image: url('img/gallery/gallery_item_6.png')">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
-                                        <p>Fashion photography</p>
-                                        <h4>Smiling beutiful women</h4>
+                                        <p>Свадебные фото</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
                                     </div>
                                 </div>
                             </div>
                         </a>
+                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="2"
+                            style="background-image: url('img/gallery/gallery_item_7.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Поедем поснимаем</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="3"
+                            style="background-image: url('img/gallery/gallery_item_8.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Портретная съемка</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="4"
+                            style="background-image: url('img/gallery/gallery_item_9.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Еда для ресторанов и другого</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
+                            style="background-image: url('img/gallery/gallery_item_10.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Объекты недвижимости</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="1"
+                            style="background-image: url('img/gallery/gallery_item_11.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Свадебные фото</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="2"
+                            style="background-image: url('img/gallery/gallery_item_12.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Поедем поснимаем</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="3"
+                            style="background-image: url('img/gallery/gallery_item_13.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Портретная съемка</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="4"
+                            style="background-image: url('img/gallery/gallery_item_14.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Еда для ресторанов и другого</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
+                            style="background-image: url('img/gallery/gallery_item_15.png')">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                        <p>Объекты недвижимости</p>
+                                        <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        
                     </div>
                 </div>
             </div>
@@ -343,7 +444,7 @@
                                 <li>Фото через файлообменник</li>
 
                             </ul>
-                            <a href="#" class="btn_2">book Now</a>
+                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -363,7 +464,7 @@
                               <li>Удаленное редактирование</li>
                               <li>Легкие правки после</li>
                             </ul>
-                            <a href="#" class="btn_2">book Now</a>
+                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -383,7 +484,7 @@
                                 <li>Дневные Ночные режимы</li>
                                 <li>Фото с воздуха по заказу</li>
                             </ul>
-                            <a href="#" class="btn_2">book Now</a>
+                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
