корректция портфолио + телефон на кнопки
+

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="gallery_part_item filtr-container">
-                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="1"
-                            style="background-image: url('img/gallery/gallery_item_1.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="1"
+                            style="background: url('img/gallery/gallery_item_1.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -169,8 +169,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="2"
-                            style="background-image: url('img/gallery/gallery_item_2.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
+                            style="background: url('img/gallery/gallery_item_2.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -180,8 +180,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="3"
-                            style="background-image: url('img/gallery/gallery_item_3.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_3.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -191,8 +191,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="4"
-                            style="background-image: url('img/gallery/gallery_item_4.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
+                            style="background: url('img/gallery/gallery_item_4.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -202,8 +202,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
-                            style="background-image: url('img/gallery/gallery_item_5.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
+                            style="background: url('img/gallery/gallery_item_5.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -213,8 +213,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="1"
-                            style="background-image: url('img/gallery/gallery_item_6.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
+                            style="background: url('img/gallery/gallery_item_6.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -224,8 +224,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="2"
-                            style="background-image: url('img/gallery/gallery_item_7.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
+                            style="background: url('img/gallery/gallery_item_7.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -235,8 +235,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="3"
-                            style="background-image: url('img/gallery/gallery_item_8.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_8.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -246,8 +246,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="4"
-                            style="background-image: url('img/gallery/gallery_item_9.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
+                            style="background: url('img/gallery/gallery_item_9.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -257,8 +257,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
-                            style="background-image: url('img/gallery/gallery_item_10.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
+                            style="background: url('img/gallery/gallery_item_10.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -268,8 +268,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal filtr-item" data-category="1"
-                            style="background-image: url('img/gallery/gallery_item_11.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
+                            style="background: url('img/gallery/gallery_item_11.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -279,8 +279,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="2"
-                            style="background-image: url('img/gallery/gallery_item_12.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="2"
+                            style="background: url('img/gallery/gallery_item_12.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -290,8 +290,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="3"
-                            style="background-image: url('img/gallery/gallery_item_13.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="3"
+                            style="background: url('img/gallery/gallery_item_13.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -301,8 +301,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-2 filtr-item" data-category="4"
-                            style="background-image: url('img/gallery/gallery_item_14.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal  filtr-item" data-category="4"
+                            style="background: url('img/gallery/gallery_item_14.png') 70% 60% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -312,8 +312,8 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="portfolio_details.html" class="img-gal width-1 filtr-item" data-category="5"
-                            style="background-image: url('img/gallery/gallery_item_15.png')">
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="5"
+                            style="background: url('img/gallery/gallery_item_15.png') 100% 100% no-repeat; background-size: cover;">
                             <div class="single_gallery_item">
                                 <div class="single_gallery_item_iner">
                                     <div class="gallery_item_text">
@@ -323,7 +323,18 @@
                                 </div>
                             </div>
                         </a>
-                        
+                        <a href="https://www.instagram.com/danbazarnyphotography/" class="img-gal filtr-item" data-category="1"
+                            style="background: url('img/gallery/gallery_item_16.png') 100% 100% no-repeat; background-size: cover;">
+                            <div class="single_gallery_item">
+                                <div class="single_gallery_item_iner">
+                                    <div class="gallery_item_text">
+                                      <p>Свадебные фото</p>
+                                      <h4>Больше фотографий посмотреть здесь</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+
                     </div>
                 </div>
             </div>
@@ -444,7 +455,7 @@
                                 <li>Фото через файлообменник</li>
 
                             </ul>
-                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
+                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -464,7 +475,7 @@
                               <li>Удаленное редактирование</li>
                               <li>Легкие правки после</li>
                             </ul>
-                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
+                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
@@ -484,7 +495,7 @@
                                 <li>Дневные Ночные режимы</li>
                                 <li>Фото с воздуха по заказу</li>
                             </ul>
-                            <a href="tel:+79788646092"> class="btn_2">Заказать</a>
+                            <a href="tel:+79788646092" class="btn_2">Заказать</a>
                         </div>
                     </div>
                 </div>
