--- a/index.html
+++ b/index.html
@@ -44,29 +44,29 @@
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#top" target="_self">Начало</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#top" target="_self">Начало</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#autor" target="_self">От Автора</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#autor" target="_self">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#work" target="_self">Работы</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#work" target="_self">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#market" target="_self">Предложения</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#market" target="_self">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#comments" target="_self">Комментарии</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#comments" target="_self">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#price" target="_self">Цены</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" target="_self">Цены</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#more" target="_self">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" target="_self">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/#contacts" target="_self">Контакты</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#contacts" target="_self">Контакты</a>
                                 </li>
                             </ul>
                         </div>
