Revert "+jS Input меню"
This reverts commit a8da276fb7a71560dfc57ae8ec9cf7912d8675ba.

--- a/index.html
+++ b/index.html
@@ -43,24 +43,26 @@
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
-                              
                                 <li class="nav-item">
-                                    <input class="nav-link" type="button" value="От Автора" onClick="window.location='http://dbazarny.ru/index.html#autor'" />
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#top" target="_self">Начало</a>
                                 </li>
                                 <li class="nav-item">
-                                  <input class="nav-link" type="button" value="Работы" onClick="window.location='http://dbazarny.ru/index.html#work'" />
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#autor" target="_self">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <input class="nav-link" type="button" value="Предложения" onClick="window.location='http://dbazarny.ru/index.html#market'" />
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#work" target="_self">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                  <input class="nav-link" type="button" value="Комментарии" onClick="window.location='http://dbazarny.ru/index.html#comments'" />
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#market" target="_self">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" target="_top">Цены</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#comments" target="_self">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" target="_top">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" target="_self">Цены</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" target="_self">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
