--- a/index.html
+++ b/index.html
@@ -43,30 +43,28 @@
 
                         <div class="collapse navbar-collapse main-menu-item" id="navbarSupportedContent">
                             <ul class="navbar-nav">
+
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#top" target="_self">Начало</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#autor" target="_top">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#autor" target="_self">От Автора</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#work" target="_top">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#work" target="_self">Работы</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#market" target="_top">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#market" target="_self">Предложения</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#comments" target="_top">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#comments" target="_self">Комментарии</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" target="_top">Цены</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" target="_self">Цены</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" target="_self">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" target="_top">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="http://dbazarny.ru/index.html#contacts" target="_self">Контакты</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#contacts" target="_top">Контакты</a>
                                 </li>
                             </ul>
                         </div>
