меню полная ссылка
с onclick

--- a/index.html
+++ b/index.html
@@ -45,26 +45,26 @@
                             <ul class="navbar-nav">
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#autor" onclick="location.reload()">От Автора</a>
+                                    <a class="nav-link" href="#autor" onclick="aria-expanded:false">От Автора</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#work" onclick="location.reload()">Работы</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#work" onclick="location.reload()">Работы</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#market" onclick="location.reload()">Предложения</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#market" onclick="location.reload()">Предложения</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#comments" onclick="location.reload()">Комментарии</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#comments" onclick="location.reload()">Комментарии</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#price" onclick="location.reload()">Цены</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#price" onclick="location.reload()">Цены</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#more" onclick="location.reload()">Еще</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#more" onclick="location.reload()">Еще</a>
                                 </li>
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#contacts" onclick="location.reload()">Контакты</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#contacts" onclick="location.reload()">Контакты</a>
                                 </li>
                             </ul>
                         </div>
