--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <ul class="navbar-nav">
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#autor" onclick="aria-expanded:false">От Автора</a>
+                                    <a class="nav-link" href="#autor" onclick="http://dbazarny.ru/index.html#autor">От Автора</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="http://dbazarny.ru/index.html#work" onclick="location.reload()">Работы</a>
