--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </head>
 
 <body>
+
     <!--::header part start::-->
     <header class="main_menu home_menu">
         <div class="container">
@@ -45,7 +46,7 @@
                             <ul class="navbar-nav">
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#autor" onclick="http://dbazarny.ru/index.html#autor">От Автора</a>
+                                    <a class="nav-link" href="http://dbazarny.ru/index.html#autor" onclick="location.reload()">От Автора</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="http://dbazarny.ru/index.html#work" onclick="location.reload()">Работы</a>
